kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arbetsprov-testapp-service
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: arbetsprov-app
    app.kubernetes.io/instance: arbetsprov-app
