kustomize/base/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: arbetsprov-gateway
spec:
  selector:
    istio: ingressgateway # default value
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "arbetsprov-app.testapp.se"
