kustomize/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: arbetsprov-app-route
  namespace: arbetsprov-app
spec:
  host: arbetsprov-app.testapp.se
  to:
    kind: Service
    name: arbetsprov-testapp-service
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
